--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,7 +4,7 @@ phases:
   pre_build:
     commands:
       - echo Logging in Docker Hubs ...
-      - docker login --username $DOCKER_USER --password-stdin $DOCKER_PASS
+      - docker login --username $DOCKER_USER --password $DOCKER_PASS
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
       - IMAGE_TAG=${COMMIT_HASH:=latest}
   build:
