--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,8 +1,12 @@
 version: 0.2
 
 phases:
+  install:
+    runtime_version:
+      docker: 18
   pre_build:
     commands:
+      - docker --version
       - echo Logging in Docker Hubs ...
       - docker login --username $DOCKER_USER --password $DOCKER_PASS
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
