--- a/buildspec.yml
+++ b/buildspec.yml
@@ -14,8 +14,10 @@ phases:
       - echo Building the Docker image...
       - docker build -t $REPO_URL:latest .
       - docker tag $REPO_URL:latest $REPO_URL:$IMAGE_TAG
+      - docker tag $REPO_URL:latest $REPO_URL:cache
   post_build:
     commands:
       - echo Build completed on `date`
       - echo Pushing the Docker images...
+      - docker push $REPO_URL:cache
       - docker push $REPO_URL:$IMAGE_TAG
